--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html lang = "en">
+  <head> <body>
 <h1>Research Paper Toolbox</h1>
 <p>Constructing a research paper is an integral part of being a graduate student in the Information Architecture, Technical Communication and Information Design, and Technical Communication programs at IIT.</p> 
 
@@ -20,6 +22,9 @@
     <li><a href="/professionalization">Professionalization</a></li>
   </ul>
 </nav>
+  </body>
+  </head>
+</html>
 [[[INSERT TOP-LEVEL NAV with links to the below modules]]]
 Home*
 Topic
