Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     
     <nav aria-label="Main Navigation">
       <ul>
-        <li><a href="/home"><strong>Home</strong></a></li>
-        <li><a href="/topic">Topic</a></li>
-        <li><a href="/research"><strong>Research</strong></a></li>
-        <li><a href="/data"><strong>Data</strong></a></li>
-        <li><a href="/references">References</a></li>
-        <li><a href="/style">Style</a></li>
-        <li><a href="/layout">Layout</a></li>
-        <li><a href="/modality">Modality</a></li>
-        <li><a href="/professionalization">Professionalization</a></li>
+        <li><a href="index.html"><strong>Home</strong></a></li>
+        <li><a href="under development.html">Topic</a></li>
+        <li><a href="Realistic Research.html"><strong>Research</strong></a></li>
+        <li><a href="data.html"><strong>Data</strong></a></li>
+        <li><a href="under development.html">References</a></li>
+        <li><a href="under development.html">Style</a></li>
+        <li><a href="under development.html">Layout</a></li>
+        <li><a href="under development.html">Modality</a></li>
+        <li><a href="under development.html">Professionalization</a></li>
       </ul>
     </nav>
       </body>
