--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html lang = "en">
   <head>
-    <body>
+    <meta charset="UTF-8"/>
     <h1>Research Paper Toolbox</h1>
+  </head>
+    <body>
     <p>Constructing a research paper is an integral part of being a graduate student in the Information Architecture, Technical Communication and Information Design, and Technical Communication programs at IIT.</p> 
     
     
