Fix HTML structure by repositioning closing head tag
Corrected HTML structure by moving the closing head tag.

--- a/Data.html
+++ b/Data.html
@@ -1,5 +1,6 @@
 <html lang = "en">
   <head>
+  </head>
     <body>
       <h1>How to organize and analyze research data</h1>
 
@@ -7,7 +8,7 @@
 [[[BEGIN SIDEBAR AROUND HERE]]]
 
 
-For this lesson, you'll need the following:
+<p>For this lesson, you'll need the following:</p>
 Microsoft Excel
 PASW (formerly SPSS) statistics software, or free trial download
 You should already be familiar with:
@@ -130,6 +131,5 @@ CAPTION: PASW allows users to export statistics to common document types.
 Test your knowledge
       Now that you've finished the lesson, please complete a short quiz to test your understanding of formatting research datasets for comprehensive statistical analysis.
     </body>
-  </head>
 
 
