--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -2,6 +2,19 @@
 <html lang = "en">
 <head>
     <h1><strong>Realistic Research: University, Web-based, and Local Resources</strong></h1>
+    <nav aria-label="Main Navigation">
+      <ul>
+        <li><a href="index.html"><strong>Home</strong></a></li>
+        <li><a href="under development.html">Topic</a></li>
+        <li><a href="Realistic Research.html"><strong>Research</strong></a></li>
+        <li><a href="data.html"><strong>Data</strong></a></li>
+        <li><a href="under development.html">References</a></li>
+        <li><a href="under development.html">Style</a></li>
+        <li><a href="under development.html">Layout</a></li>
+        <li><a href="under development.html">Modality</a></li>
+        <li><a href="under development.html">Professionalization</a></li>
+      </ul>
+    </nav>
 </head>
 <body>
     <p>This lesson is meant for students who must begin research in their first semester of the TCID, IA, or the Ph.D. in Technical Communication program who want to develop, improve, or refresh their research skills. Additionally, this lesson is designed to give students strategies which will help them research more efficiently.</p>
