Fix link case sensitivity for Data page

--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -7,7 +7,7 @@
         <li><a href="index.html"><strong>Home</strong></a></li>
         <li><a href="under development.html">Topic</a></li>
         <li><a href="Realistic Research.html"><strong>Research</strong></a></li>
-        <li><a href="data.html"><strong>Data</strong></a></li>
+        <li><a href="Data.html"><strong>Data</strong></a></li>
         <li><a href="under development.html">References</a></li>
         <li><a href="under development.html">Style</a></li>
         <li><a href="under development.html">Layout</a></li>
