--- a/under development.html
+++ b/under development.html
@@ -2,6 +2,18 @@
 <html>
   <header>
     <meta charset="utf-8">
-    
+    <nav aria-label="Main Navigation">
+      <ul>
+        <li><a href="index.html"><strong>Home</strong></a></li>
+        <li><a href="under development.html">Topic</a></li>
+        <li><a href="Realistic Research.html"><strong>Research</strong></a></li>
+        <li><a href="Data.html"><strong>Data</strong></a></li>
+        <li><a href="under development.html">References</a></li>
+        <li><a href="under development.html">Style</a></li>
+        <li><a href="under development.html">Layout</a></li>
+        <li><a href="under development.html">Modality</a></li>
+        <li><a href="under development.html">Professionalization</a></li>
+      </ul>
+    </nav>
   </header>
 </html>
