--- a/under development.html
+++ b/under development.html
@@ -16,4 +16,7 @@
       </ul>
     </nav>
   </header>
+  <body>
+    <p>Sorry, this page is currently under development, but it will be updated shortly. Thank you for your patience. Have a great day!</p>
+  </body>
 </html>
