--- a/under development.html
+++ b/under development.html
@@ -2,6 +2,7 @@
 <html>
   <header>
     <meta charset="utf-8">
+    <h1>Type</h1>
     <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
