--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang = "en">
   <head>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="style.css">
     <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
