--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
