Add stylesheet link to under development page

--- a/under development.html
+++ b/under development.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <header>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <h1>Under Development</h1>
     <nav aria-label="Main Navigation">
