--- a/under development.html
+++ b/under development.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <nav aria-label="Main Navigation">
@@ -17,7 +17,7 @@
       </ul>
     </nav>
     <h1>Under Development</h1>
-  </header>
+  </head>
   <body>
     <p>Sorry, this page is currently under development, but it will be updated shortly. Thank you for your patience. Have a great day!</p>
   </body>
