--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <nav aria-label="Main Navigation">
