--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -2,6 +2,7 @@
 <html lang = "en">
 <head>
         <link rel="stylesheet" href="style.css">
+         <title>Sidebar with Scrolling</title>
 </head>
 <body>
  <nav aria-label="Main Navigation">
