--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="style.css">
+     <title>Sidebar with Scrolling</title>
     <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
