--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -3,6 +3,7 @@
 <html lang = "en">
 <head>
         <link rel="stylesheet" href="style.css">
+        <meta charset=UTF-8">
 </head>
 <body>
  <nav aria-label="Main Navigation">
