--- a/Realistic Research.html
+++ b/Realistic Research.html
@@ -3,6 +3,7 @@
 <html lang = "en">
 <head>
         <meta charset=UTF-8">
+        <title>Realistic Research: University, Web-based, and Local Resources</title>
         <link rel="stylesheet" href="style.css">
         
 </head>
@@ -20,7 +21,6 @@
         <li><a href="under development.html">Professionalization</a></li>
         </ul>
     </nav>
-    <h1><strong>Realistic Research: University, Web-based, and Local Resources</strong></h1>
     <p>This lesson is meant for students who must begin research in their first semester of the TCID, IA, or the Ph.D. in Technical Communication program who want to develop, improve, or refresh their research skills. Additionally, this lesson is designed to give students strategies which will help them research more efficiently.</p>
     <h2><strong>Content Areas</strong></h2>
     <p>This lesson will help you learn to acquire research resources through a review of the following areas:</p>
