--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="style.css">
-     <title>Sidebar with Scrolling</title>
+     <title>Research Paper Toolbox</title>
     <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
@@ -18,7 +18,6 @@
         <li><a href="under development.html">Professionalization</a></li>
       </ul>
     </nav>
-    <h1>Research Paper Toolbox</h1>
   </head>
     <body>
     <p>Constructing a research paper is an integral part of being a graduate student in the Information Architecture, Technical Communication and Information Design, and Technical Communication programs at IIT.</p> 
