--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="style.css">
      <title>Research Paper Toolbox</title>
-    <nav aria-label="Main Navigation">
+  </head>
+    <body>
+      <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
         <li><a href="under development.html">Topic</a></li>
@@ -18,8 +20,9 @@
         <li><a href="under development.html">Professionalization</a></li>
       </ul>
     </nav>
-  </head>
-    <body>
+      <header>
+        <h1>Research Paper Toolbox</h1>
+      </header>
     <p>Constructing a research paper is an integral part of being a graduate student in the Information Architecture, Technical Communication and Information Design, and Technical Communication programs at IIT.</p> 
     
     
