--- a/under development.html
+++ b/under development.html
@@ -3,6 +3,13 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    <title>Under Development</title>
+  </head>
+  <body>
+    
+    <header>
+      <h1>Under Development</h1>
+    </header>
     <nav aria-label="Main Navigation">
       <ul>
         <li><a href="index.html"><strong>Home</strong></a></li>
@@ -16,9 +23,6 @@
         <li><a href="under development.html">Professionalization</a></li>
       </ul>
     </nav>
-    <h1>Under Development</h1>
-  </head>
-  <body>
     <p>Sorry, this page is currently under development, but it will be updated shortly. Thank you for your patience. Have a great day!</p>
   </body>
 </html>
